implement elitist and mmas

--- a/train_deepaco.ipynb
+++ b/train_deepaco.ipynb
@@ -17,7 +17,7 @@
    ],
    "source": [
     "from rl4co.envs.routing import TSPEnv, TSPGenerator\n",
-    "from rl4co.models import GFACSPolicy, GFACS\n",
+    "from rl4co.models import DeepACOPolicy, DeepACO\n",
     "from rl4co.utils import RL4COTrainer\n",
     "\n",
     "\n",
@@ -30,13 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6135111a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate generator and environment\n",
-    "generator = TSPGenerator(num_loc=50, loc_distribution=\"uniform\")\n",
+    "num_loc = 50\n",
+    "generator = TSPGenerator(num_loc=num_loc, loc_distribution=\"uniform\")\n",
     "env = TSPEnv(generator)"
    ]
   },
@@ -57,20 +58,22 @@
    ],
    "source": [
     "\n",
-    "policy = GFACSPolicy(env_name=env.name, \n",
+    "policy = DeepACOPolicy(env_name=env.name, \n",
     "                     aco_class=FocusedACO,\n",
-    "                     k_sparse=20, \n",
+    "                     k_sparse=num_loc, \n",
+    "                     train_with_local_search=True,\n",
     "                     aco_kwargs={\"use_local_search\": True})\n",
-    "model = GFACS(env, \n",
+    "model = DeepACO(env, \n",
     "              policy, \n",
     "              batch_size=512, \n",
     "              train_data_size=10_000,\n",
     "              val_data_size=1_000,\n",
+    "              val_batch_size=512,\n",
     "              test_data_size=1_000, \n",
-    "              optimizer_kwargs={\"lr\": 1e-5}\n",
+    "              optimizer_kwargs={\"lr\": 1e-4}\n",
     "              )\n",
     "\n",
-    "logger = WandbLogger(project=\"hdgaco\", name=\"tsp_50_mmas\")"
+    "logger = WandbLogger(project=\"hdgaco\", name=\"tsp_50_deepaco_faco\")"
    ]
   },
   {
@@ -80,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_callback = ModelCheckpoint(  dirpath=\"checkpoints/gfacs_mmas\", # save to checkpoints/\n",
+    "checkpoint_callback = ModelCheckpoint(  dirpath=\"checkpoints/gfacs_mmas_{num_loc}\", # save to checkpoints/\n",
     "                                        filename=\"epoch_{epoch:03d}\",  # save as epoch_XXX.ckpt\n",
     "                                        save_top_k=1, # save only the best model\n",
     "                                        save_last=True, # save the last model\n",
@@ -162,7 +165,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>./wandb/run-20250704_143150-0rtvqr8m</code>"
+       "Run data is saved locally in <code>./wandb/run-20250704_202112-qw4u37pl</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -174,7 +177,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/0rtvqr8m' target=\"_blank\">tsp_50_mmas</a></strong> to <a href='https://wandb.ai/shoraaa-vnu/hdgaco' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/qw4u37pl' target=\"_blank\">tsp_50_deepaco_as</a></strong> to <a href='https://wandb.ai/shoraaa-vnu/hdgaco' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -198,7 +201,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/0rtvqr8m' target=\"_blank\">https://wandb.ai/shoraaa-vnu/hdgaco/runs/0rtvqr8m</a>"
+       " View run at <a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/qw4u37pl' target=\"_blank\">https://wandb.ai/shoraaa-vnu/hdgaco/runs/qw4u37pl</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -211,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shora/Research/rl4co/.venv/lib/python3.12/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:658: Checkpoint directory /home/shora/Research/rl4co/checkpoints/gfacs_mmas exists and is not empty.\n",
+      "/home/shora/Research/rl4co/.venv/lib/python3.12/site-packages/lightning/pytorch/callbacks/model_checkpoint.py:658: Checkpoint directory /home/shora/Research/rl4co/checkpoints/gfacs_mmas_{num_loc} exists and is not empty.\n",
       "val_file not set. Generating dataset instead\n",
       "test_file not set. Generating dataset instead\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
@@ -224,15 +227,14 @@
        "┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">   </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Name                             </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Type                     </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Params </span>┃<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> Mode  </span>┃\n",
        "┡━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━┩\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 0 </span>│ env                              │ TSPEnv                   │      0 │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 1 </span>│ policy                           │ GFACSPolicy              │  337 K │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 2 </span>│ policy.encoder                   │ GFACSEncoder             │  337 K │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 1 </span>│ policy                           │ DeepACOPolicy            │  332 K │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 2 </span>│ policy.encoder                   │ NARGNNEncoder            │  332 K │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 3 </span>│ policy.encoder.init_embedding    │ TSPInitEmbedding         │    192 │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 4 </span>│ policy.encoder.edge_embedding    │ TSPEdgeEmbedding         │    128 │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 5 </span>│ policy.encoder.graph_network     │ GNNEncoder               │  315 K │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 6 </span>│ policy.encoder.heatmap_generator │ EdgeHeatmapGenerator     │ 16.7 K │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 7 </span>│ policy.encoder.Z_net             │ Sequential               │  4.3 K │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 8 </span>│ policy.decoder                   │ NonAutoregressiveDecoder │      0 │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 9 </span>│ baseline                         │ NoBaseline               │      0 │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 7 </span>│ policy.decoder                   │ NonAutoregressiveDecoder │      0 │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 8 </span>│ baseline                         │ NoBaseline               │      0 │ train │\n",
        "└───┴──────────────────────────────────┴──────────────────────────┴────────┴───────┘\n",
        "</pre>\n"
       ],
@@ -241,15 +243,14 @@
        "┃\u001b[1;35m \u001b[0m\u001b[1;35m \u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mName                            \u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mType                    \u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mParams\u001b[0m\u001b[1;35m \u001b[0m┃\u001b[1;35m \u001b[0m\u001b[1;35mMode \u001b[0m\u001b[1;35m \u001b[0m┃\n",
        "┡━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━┩\n",
        "│\u001b[2m \u001b[0m\u001b[2m0\u001b[0m\u001b[2m \u001b[0m│ env                              │ TSPEnv                   │      0 │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m1\u001b[0m\u001b[2m \u001b[0m│ policy                           │ GFACSPolicy              │  337 K │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m2\u001b[0m\u001b[2m \u001b[0m│ policy.encoder                   │ GFACSEncoder             │  337 K │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m1\u001b[0m\u001b[2m \u001b[0m│ policy                           │ DeepACOPolicy            │  332 K │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m2\u001b[0m\u001b[2m \u001b[0m│ policy.encoder                   │ NARGNNEncoder            │  332 K │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m3\u001b[0m\u001b[2m \u001b[0m│ policy.encoder.init_embedding    │ TSPInitEmbedding         │    192 │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m4\u001b[0m\u001b[2m \u001b[0m│ policy.encoder.edge_embedding    │ TSPEdgeEmbedding         │    128 │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m5\u001b[0m\u001b[2m \u001b[0m│ policy.encoder.graph_network     │ GNNEncoder               │  315 K │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m6\u001b[0m\u001b[2m \u001b[0m│ policy.encoder.heatmap_generator │ EdgeHeatmapGenerator     │ 16.7 K │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m7\u001b[0m\u001b[2m \u001b[0m│ policy.encoder.Z_net             │ Sequential               │  4.3 K │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m8\u001b[0m\u001b[2m \u001b[0m│ policy.decoder                   │ NonAutoregressiveDecoder │      0 │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m9\u001b[0m\u001b[2m \u001b[0m│ baseline                         │ NoBaseline               │      0 │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m7\u001b[0m\u001b[2m \u001b[0m│ policy.decoder                   │ NonAutoregressiveDecoder │      0 │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m8\u001b[0m\u001b[2m \u001b[0m│ baseline                         │ NoBaseline               │      0 │ train │\n",
        "└───┴──────────────────────────────────┴──────────────────────────┴────────┴───────┘\n"
       ]
      },
@@ -259,20 +260,20 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Trainable params</span>: 337 K                                                                                            \n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Trainable params</span>: 332 K                                                                                            \n",
        "<span style=\"font-weight: bold\">Non-trainable params</span>: 0                                                                                            \n",
-       "<span style=\"font-weight: bold\">Total params</span>: 337 K                                                                                                \n",
+       "<span style=\"font-weight: bold\">Total params</span>: 332 K                                                                                                \n",
        "<span style=\"font-weight: bold\">Total estimated model params size (MB)</span>: 1                                                                          \n",
-       "<span style=\"font-weight: bold\">Modules in train mode</span>: 172                                                                                         \n",
+       "<span style=\"font-weight: bold\">Modules in train mode</span>: 168                                                                                         \n",
        "<span style=\"font-weight: bold\">Modules in eval mode</span>: 0                                                                                            \n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mTrainable params\u001b[0m: 337 K                                                                                            \n",
+       "\u001b[1mTrainable params\u001b[0m: 332 K                                                                                            \n",
        "\u001b[1mNon-trainable params\u001b[0m: 0                                                                                            \n",
-       "\u001b[1mTotal params\u001b[0m: 337 K                                                                                                \n",
+       "\u001b[1mTotal params\u001b[0m: 332 K                                                                                                \n",
        "\u001b[1mTotal estimated model params size (MB)\u001b[0m: 1                                                                          \n",
-       "\u001b[1mModules in train mode\u001b[0m: 172                                                                                         \n",
+       "\u001b[1mModules in train mode\u001b[0m: 168                                                                                         \n",
        "\u001b[1mModules in eval mode\u001b[0m: 0                                                                                            \n"
       ]
      },
@@ -312,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 20/20 [01:10<00:00,  0.28it/s, v_num=qr8m, train/reward=-10.9, train/loss=3.06e+3, val/reward=-7.79]"
+      "Epoch 19: 100%|██████████| 20/20 [00:31<00:00,  0.64it/s, v_num=37pl, train/reward=-7.22, train/loss=-0.19, val/reward=-5.67] "
      ]
     },
     {
@@ -326,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19: 100%|██████████| 20/20 [01:10<00:00,  0.28it/s, v_num=qr8m, train/reward=-10.9, train/loss=3.06e+3, val/reward=-7.79]\n"
+      "Epoch 19: 100%|██████████| 20/20 [00:31<00:00,  0.64it/s, v_num=37pl, train/reward=-7.22, train/loss=-0.19, val/reward=-5.67]\n"
      ]
     }
    ],
@@ -354,7 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing DataLoader 0: 100%|██████████| 2/2 [00:45<00:00,  0.04it/s]\n"
+      "Testing DataLoader 0: 100%|██████████| 2/2 [00:10<00:00,  0.19it/s]\n"
      ]
     },
     {
@@ -363,7 +364,7 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">        test/reward        </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    -7.803566932678223     </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">        test/reward        </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     -5.68765115737915     </span>│\n",
        "└───────────────────────────┴───────────────────────────┘\n",
        "</pre>\n"
       ],
@@ -371,7 +372,7 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│\u001b[36m \u001b[0m\u001b[36m       test/reward       \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   -7.803566932678223    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m       test/reward       \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    -5.68765115737915    \u001b[0m\u001b[35m \u001b[0m│\n",
        "└───────────────────────────┴───────────────────────────┘\n"
       ]
      },
@@ -381,7 +382,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'test/reward': -7.803566932678223}]"
+       "[{'test/reward': -5.68765115737915}]"
       ]
      },
      "execution_count": 7,
