--- a/train_neufaco.ipynb
+++ b/train_neufaco.ipynb
@@ -8,14 +8,16 @@
    "outputs": [],
    "source": [
     "from rl4co.envs.routing import TSPEnv, TSPGenerator\n",
-    "from rl4co.models import DeepACOPolicy, DeepACO\n",
+    "\n",
+    "from rl4co.models.zoo.neufaco.model import DeepACO\n",
+    "from rl4co.models.zoo.neufaco.policy import DeepACOPolicy\n",
     "from rl4co.utils import RL4COTrainer\n",
     "\n",
     "\n",
     "from lightning.pytorch.callbacks import ModelCheckpoint, RichModelSummary\n",
     "from lightning.pytorch.loggers import WandbLogger\n",
     "\n",
-    "from rl4co.models.zoo.deepaco.antsystem import AntSystem\n",
+    "from rl4co.models.zoo.neufaco.antsystem import AntSystem\n",
     "from rl4co.models.zoo.hdgaco.FocusedACO import FocusedACO"
    ]
   },
@@ -50,9 +52,8 @@
    "source": [
     "\n",
     "\n",
-    "\n",
     "policy = DeepACOPolicy(env_name=env.name, \n",
-    "                     aco_class=FocusedACO,\n",
+    "                     aco_class=AntSystem,\n",
     "                     k_sparse=20, \n",
     "                     train_with_local_search=True,\n",
     "                     aco_kwargs={\"use_local_search\": True})\n",
@@ -133,7 +134,9 @@
     },
     {
      "data": {
-      "text/html": [],
+      "text/html": [
+       "creating run (0.5s)"
+      ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
@@ -156,7 +159,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>./wandb/run-20250705_205450-o2302aqs</code>"
+       "Run data is saved locally in <code>./wandb/run-20250705_213846-sdav8gkv</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -168,7 +171,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/o2302aqs' target=\"_blank\">tsp_{num_loc}_deepaco_faco</a></strong> to <a href='https://wandb.ai/shoraaa-vnu/hdgaco' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/sdav8gkv' target=\"_blank\">tsp_{num_loc}_deepaco_faco</a></strong> to <a href='https://wandb.ai/shoraaa-vnu/hdgaco' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -192,7 +195,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/o2302aqs' target=\"_blank\">https://wandb.ai/shoraaa-vnu/hdgaco/runs/o2302aqs</a>"
+       " View run at <a href='https://wandb.ai/shoraaa-vnu/hdgaco/runs/sdav8gkv' target=\"_blank\">https://wandb.ai/shoraaa-vnu/hdgaco/runs/sdav8gkv</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -274,7 +277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "490ae04d4278425aa77f3c9057a6ba5a",
+       "model_id": "db95d00a5405471da7d0ec67c5f822a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,31 +296,12 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorDict(\n",
-      "    fields={\n",
-      "        action_mask: Tensor(shape=torch.Size([512, 50]), device=cuda:0, dtype=torch.bool, is_shared=True),\n",
-      "        current_node: Tensor(shape=torch.Size([512]), device=cuda:0, dtype=torch.int64, is_shared=True),\n",
-      "        done: Tensor(shape=torch.Size([512, 1]), device=cuda:0, dtype=torch.bool, is_shared=True),\n",
-      "        first_node: Tensor(shape=torch.Size([512]), device=cuda:0, dtype=torch.int64, is_shared=True),\n",
-      "        i: Tensor(shape=torch.Size([512, 1]), device=cuda:0, dtype=torch.int64, is_shared=True),\n",
-      "        locs: Tensor(shape=torch.Size([512, 50, 2]), device=cuda:0, dtype=torch.float32, is_shared=True),\n",
-      "        reward: Tensor(shape=torch.Size([512, 1]), device=cuda:0, dtype=torch.float32, is_shared=True),\n",
-      "        terminated: Tensor(shape=torch.Size([512, 1]), device=cuda:0, dtype=torch.bool, is_shared=True)},\n",
-      "    batch_size=torch.Size([512]),\n",
-      "    device=cuda:0,\n",
-      "    is_shared=True)\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
+     "ename": "TypeError",
+     "evalue": "AntSystem.__init__() got an unexpected keyword argument 'best_ant_only'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
       "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtrainer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/rl4co/utils/trainer.py:146\u001b[39m, in \u001b[36mRL4COTrainer.fit\u001b[39m\u001b[34m(self, model, train_dataloaders, val_dataloaders, datamodule, ckpt_path)\u001b[39m\n\u001b[32m    141\u001b[39m         log.warning(\n\u001b[32m    142\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mOverriding gradient_clip_val to None for \u001b[39m\u001b[33m'\u001b[39m\u001b[33mautomatic_optimization=False\u001b[39m\u001b[33m'\u001b[39m\u001b[33m models\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    143\u001b[39m         )\n\u001b[32m    144\u001b[39m         \u001b[38;5;28mself\u001b[39m.gradient_clip_val = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m146\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    147\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    148\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtrain_dataloaders\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtrain_dataloaders\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    149\u001b[39m \u001b[43m    \u001b[49m\u001b[43mval_dataloaders\u001b[49m\u001b[43m=\u001b[49m\u001b[43mval_dataloaders\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    150\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdatamodule\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdatamodule\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    151\u001b[39m \u001b[43m    \u001b[49m\u001b[43mckpt_path\u001b[49m\u001b[43m=\u001b[49m\u001b[43mckpt_path\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    152\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/.venv/lib/python3.12/site-packages/lightning/pytorch/trainer/trainer.py:561\u001b[39m, in \u001b[36mTrainer.fit\u001b[39m\u001b[34m(self, model, train_dataloaders, val_dataloaders, datamodule, ckpt_path)\u001b[39m\n\u001b[32m    559\u001b[39m \u001b[38;5;28mself\u001b[39m.training = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    560\u001b[39m \u001b[38;5;28mself\u001b[39m.should_stop = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m561\u001b[39m \u001b[43mcall\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_call_and_handle_interrupt\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    562\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_fit_impl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_dataloaders\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_dataloaders\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdatamodule\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mckpt_path\u001b[49m\n\u001b[32m    563\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
@@ -332,8 +316,11 @@
       "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/.venv/lib/python3.12/site-packages/lightning/pytorch/trainer/call.py:328\u001b[39m, in \u001b[36m_call_strategy_hook\u001b[39m\u001b[34m(trainer, hook_name, *args, **kwargs)\u001b[39m\n\u001b[32m    325\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    327\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m trainer.profiler.profile(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[Strategy]\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrainer.strategy.\u001b[34m__class__\u001b[39m.\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhook_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m328\u001b[39m     output = \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    330\u001b[39m \u001b[38;5;66;03m# restore current_fx when nested context\u001b[39;00m\n\u001b[32m    331\u001b[39m pl_module._current_fx_name = prev_fx_name\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/.venv/lib/python3.12/site-packages/lightning/pytorch/strategies/strategy.py:412\u001b[39m, in \u001b[36mStrategy.validation_step\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    410\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.model != \u001b[38;5;28mself\u001b[39m.lightning_module:\n\u001b[32m    411\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_redirection(\u001b[38;5;28mself\u001b[39m.model, \u001b[38;5;28mself\u001b[39m.lightning_module, \u001b[33m\"\u001b[39m\u001b[33mvalidation_step\u001b[39m\u001b[33m\"\u001b[39m, *args, **kwargs)\n\u001b[32m--> \u001b[39m\u001b[32m412\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlightning_module\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidation_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/rl4co/models/rl/common/base.py:261\u001b[39m, in \u001b[36mRL4COLitModule.validation_step\u001b[39m\u001b[34m(self, batch, batch_idx, dataloader_idx)\u001b[39m\n\u001b[32m    260\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mvalidation_step\u001b[39m(\u001b[38;5;28mself\u001b[39m, batch: Any, batch_idx: \u001b[38;5;28mint\u001b[39m, dataloader_idx: \u001b[38;5;28mint\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m--> \u001b[39m\u001b[32m261\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mshared_step\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    262\u001b[39m \u001b[43m        \u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mphase\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mval\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataloader_idx\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdataloader_idx\u001b[49m\n\u001b[32m    263\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/rl4co/models/zoo/deepaco/model.py:57\u001b[39m, in \u001b[36mDeepACO.shared_step\u001b[39m\u001b[34m(self, batch, batch_idx, phase, dataloader_idx)\u001b[39m\n\u001b[32m     54\u001b[39m td = \u001b[38;5;28mself\u001b[39m.env.reset(batch)\n\u001b[32m     56\u001b[39m \u001b[38;5;28mprint\u001b[39m(td)\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m     59\u001b[39m \u001b[38;5;66;03m# Perform forward pass (i.e., constructing solution and computing log-likelihoods)\u001b[39;00m\n\u001b[32m     60\u001b[39m out = \u001b[38;5;28mself\u001b[39m.policy(td, \u001b[38;5;28mself\u001b[39m.env, phase=phase)\n",
-      "\u001b[31mAssertionError\u001b[39m: "
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/rl4co/models/zoo/neufaco/model.py:56\u001b[39m, in \u001b[36mDeepACO.shared_step\u001b[39m\u001b[34m(self, batch, batch_idx, phase, dataloader_idx)\u001b[39m\n\u001b[32m     54\u001b[39m td = \u001b[38;5;28mself\u001b[39m.env.reset(batch)\n\u001b[32m     55\u001b[39m \u001b[38;5;66;03m# Perform forward pass (i.e., constructing solution and computing log-likelihoods)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m56\u001b[39m out = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mpolicy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mphase\u001b[49m\u001b[43m=\u001b[49m\u001b[43mphase\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     58\u001b[39m \u001b[38;5;66;03m# Compute loss\u001b[39;00m\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m phase == \u001b[33m\"\u001b[39m\u001b[33mtrain\u001b[39m\u001b[33m\"\u001b[39m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1751\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1749\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1750\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1751\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1762\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1757\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1758\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1759\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1760\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1761\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1762\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1764\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1765\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Research/rl4co/rl4co/models/zoo/neufaco/policy.py:174\u001b[39m, in \u001b[36mDeepACOPolicy.forward\u001b[39m\u001b[34m(self, td_initial, env, phase, return_actions, return_hidden, actions, **decoding_kwargs)\u001b[39m\n\u001b[32m    171\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m.top_p <= \u001b[32m1.0\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mtop-p should be in (0, 1].\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    172\u001b[39m     heatmap = modify_logits_for_top_p_filtering(heatmap, \u001b[38;5;28mself\u001b[39m.top_p)\n\u001b[32m--> \u001b[39m\u001b[32m174\u001b[39m aco = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43maco_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43mheatmap\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_ants\u001b[49m\u001b[43m=\u001b[49m\u001b[43mn_ants\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43maco_kwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    175\u001b[39m actions, iter_rewards = aco.run(td_initial, env, \u001b[38;5;28mself\u001b[39m.n_iterations[phase], decoding_kwargs)\n\u001b[32m    177\u001b[39m out = {\u001b[33m\"\u001b[39m\u001b[33mreward\u001b[39m\u001b[33m\"\u001b[39m: iter_rewards[\u001b[38;5;28mself\u001b[39m.n_iterations[phase] - \u001b[32m1\u001b[39m]}\n",
+      "\u001b[31mTypeError\u001b[39m: AntSystem.__init__() got an unexpected keyword argument 'best_ant_only'"
      ]
     }
    ],
